--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,7 @@
   align-items: center;
 }
 
-.freecodecamp-logo-contenedor {
-  width: 100%;
-  height: 50px;
-  margin: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.freecodecamp-logo {
-  height: 40px;
-}
-
-.contenedor-calculadora {
+.container-calculator {
   width: 400px;
   height: 600px;
   padding: 14px;
@@ -31,7 +18,7 @@
   border: 5px solid white;
 }
 
-.fila {
+.line {
   margin: 4px;
   display: flex;
   align-items: center;
