--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,4 +1,4 @@
-.bottom-container {
+.button-container {
   height: 83px;
   display: flex;
   flex: 1 1;
@@ -15,7 +15,7 @@
   user-select: none;
 }
 
-.bottom-container:hover {
+.button-container:hover {
   background-color: #5a01a7;
 }
 
